Fix copy and small tx receipt alignment issue

--- a/src/components/TransactionFlow/TxReceipt.scss
+++ b/src/components/TransactionFlow/TxReceipt.scss
@@ -82,10 +82,6 @@
       &-column {
         &:first-child {
           font-weight: bold;
-
-          @media (min-width: 500px) {
-            flex: 1;
-          }
         }
         &:nth-child(2) {
           flex: 2;
